- If Explorer++ is running when the session is ended (e.g. when
  logging off), the settings will now be saved first. Previously,
  the application would simply be terminated.
- DPI changes are now better handled.
- A global history menu is now available at Go > History. That
  menu will display a list of all history items, with more recent
  items appearing first.
- When navigating to a history entry, the file selection will now
  be restored.
- When being used as the default file manager, Explorer++ now
  registers itself as a shell window. That means that in certain
  situations, like when opening an item in Explorer from another
  application, Explorer++ should be opened instead. See #270.
- When items are grouped, the sort mode can now be changed. This
  allows items to be grouped in one way but sorted in another.
  See #381.
- A search tabs dialog has been added. That dialog allows tabs to
  be searched for by both name and path.
- Pasting in virtual folders has been improved.
- Symlinks can now be pasted via Edit > Paste Symbolic Link. That
  operation requires elevation unless developer mode (Windows
  10+) is enabled.
- Large and extra large thumbnail views have been added.
- The options dialog now contains a search field. Entering a term
  in that field will filter the pages shown, with only pages that
  contain the search term remaining.
- The Ctrl and Shift keys can now generally be used to control
  how an item is opened. When Ctrl is down, the item will be
  opened in a new foreground tab; when Ctrl and Shift are down,
  the item will be opened in a new background tab; when Shift is
  down, the item will be opened in a new window.
- An option has been added that allows the user to choose whether
  tabs are opened in the background or foreground by default.
  This option also alters how the Ctrl and Ctrl+Shift modifiers
  work; if tabs are opened in the background by default, Ctrl and
  Ctrl+Shift will work in the opposite way from normal.