@@ -4,13 +4,17 @@
 
 #pragma once
 
-#define MENU_BOOKMARK_START_ID 10000
-#define MENU_BOOKMARK_END_ID 11000
-#define MENU_RECENT_TABS_START_ID 12000
-#define MENU_RECENT_TABS_END_ID 13000
-#define MENU_PLUGIN_START_ID 14000
-#define MENU_PLUGIN_END_ID 15000
-#define ACCELERATOR_PLUGIN_START_ID 16000
-#define ACCELERATOR_PLUGIN_END_ID 17000
-#define MENU_HISTORY_START_ID 18000
-#define MENU_HISTORY_END_ID 19000
+// The start of each range here is inclusive, while the end is exclusive. That is, each range
+// represents [start, end).
+inline constexpr UINT MENU_BOOKMARK_START_ID = 10000;
+inline constexpr UINT MENU_BOOKMARK_END_ID = 11000;
+inline constexpr UINT MENU_RECENT_TABS_START_ID = 11000;
+inline constexpr UINT MENU_RECENT_TABS_END_ID = 12000;
+inline constexpr UINT MENU_PLUGIN_START_ID = 12000;
+inline constexpr UINT MENU_PLUGIN_END_ID = 13000;
+inline constexpr UINT ACCELERATOR_PLUGIN_START_ID = 13000;
+inline constexpr UINT ACCELERATOR_PLUGIN_END_ID = 14000;
+inline constexpr UINT MENU_HISTORY_START_ID = 14000;
+inline constexpr UINT MENU_HISTORY_END_ID = 15000;
+inline constexpr UINT MENU_FREQUENT_LOCATIONS_START_ID = 15000;
+inline constexpr UINT MENU_FREQUENT_LOCATIONS_END_ID = 16000;
